Initial Andronoid/theme1 theme installation

--- a/.htaccess
+++ b/.htaccess
@@ -138,6 +138,8 @@
     Options +FollowSymLinks
     RewriteEngine on
 
+    #RewriteRule .* - [E=MAGE_RUN_CODE:default]
+    RewriteRule .* - [E=MAGE_RUN_CODE:andronoid_store]
 ############################################
 ## you can put here your magento root folder
 ## path relative to web root
