--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "magento/module-grouped-product-sample-data": "100.2.*",
         "magento/module-offline-shipping-sample-data": "100.2.*",
         "magento/module-swatches-sample-data": "100.2.*",
-        "magento/sample-data-media": "100.2.*"
+        "magento/sample-data-media": "100.2.*",
+        "andronoid/carousel": "dev-andronoid"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.2.0",
@@ -70,12 +71,16 @@
         }
     },
     "minimum-stability": "stable",
-    "repositories": [
-        {
+    "repositories": {
+        "0": {
             "type": "composer",
             "url": "https://repo.magento.com/"
+        },
+        "owlcarousel2": {
+            "type": "vcs",
+            "url": "https://github.com/andronoid/OwlCarousel2"
         }
-    ],
+    },
     "extra": {
         "magento-force": "override"
     }
